# CB_Policy_Analysis

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: launch.json  settings.json
.claude/commands/: compact-context.md
.claude/hooks/: context-size-check.ps1
.github/workflows/: pages.yml
data/lexicons/: action_tone.json  hawk_dove.json  themes.json
data/monitor/: fomc_calendar.csv  latest_redline.json  redlines.json  tone_history.csv
docs/context/: lessons.md  memory.md  results.md  sesion-log.md  todo.md
docs/plans/: 2026-06-18-fomc-eval-harness.md  2026-06-19-fomc-marginal-effect.md  2026-06-29-lexicon-tone-baseline.md  2026-06-30-statement-monitor.md  2026-06-30-statement-tracker-v2.md
docs/prd/: 001-fomc-eval-harness.md  002-fomc-marginal-effect.md  003-lexicon-tone-baseline.md  004-fomc-statement-monitor.md  (+1 more)
scripts/: action_tone_monitor.py  diagnostic_doctype.py  lexicon_confound_check.py  plot_tone_timeseries.py  plot_tracker_figures.py  plot_verdict_figures.py  seed_calendar.py
tests/: test_action_lexicon.py  test_aligner.py  test_calendar.py  test_cli.py  test_config.py  test_contrast_deltas.py  test_eventstudy.py  test_fomc_statements.py  test_fred.py  test_lexicon_scorer.py  test_metrics.py  test_models.py  test_monitor_calendar.py  test_monitor_contrast.py  test_monitor_history.py  test_monitor_main.py  test_monitor_metrics.py  test_monitor_score.py  test_monitor_site.py  test_mp_surprise.py  test_nested.py  test_plot_tone.py  test_sanity.py  test_stance.py  test_stance_scorer.py  test_store.py  test_walkforward.py
(+34 files in other folders)
