# pyproject.toml
[project]
name = "cbp"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = ["pandas>=2.0", "numpy>=1.26", "statsmodels>=0.14", "fredapi>=0.5", "pyarrow>=14"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "hypothesis>=6.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
